@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# Copyright (C) 2009-2020, Luis Pedro Coelho <luis@luispedro.org>
+# Copyright (C) 2009-2024, Luis Pedro Coelho <luis@luispedro.org>
 # vim: set ts=4 sts=4 sw=4 expandtab smartindent:
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -32,6 +32,7 @@ __all__ = [
     'identity',
     'jug_execute',
     'CustomHash',
+    'UnsafeNoHash',
     'sync_move',
     'cached_glob',
     ]
@@ -117,6 +118,38 @@ class CustomHash:
 
     def __jug_value__(self):
         return value(self.obj)
+
+class UnsafeNoHash:
+    '''
+    Class that indicates that no hashing is to be done on an object.
+
+    This is useful when you want to indicate that the object should not be
+    hashed as its value is not important.
+
+    For example, if you are using jug_execute and one of the arguments is the
+    number of CPUs:
+
+    ::
+
+        jug_execute(['make', '-j', UnsafeNoHash(4)])
+
+    This way, the number of CPUs is not hashed and the task will be **not** be
+    rerun if the number of CPUs changes.
+
+    Parameters
+    ----------
+    obj : any object
+    '''
+    def __init__(self, obj):
+        self.obj = obj
+
+    def __jug_value__(self):
+        return self.obj
+
+    def __jug_hash__(self):
+        return b'nohash'
+
+
 
 def hash_with_mtime_size(path):
     '''hvalue = hash_with_mtime_size(path)
