@@ -2,6 +2,7 @@ Unreleased
 	* Tasklet: Support for lambda functions in Tasklets
 	* pack: bugfix when using local imports
 	* jug: better error detection for permission problems
+	* jug.utils: Add UnsafeNoHash
 
 Version 2.3.1 Sun 5 November 2023 by luispedro
 	* jug: update for Python 3.12
